<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Personal_info">

    <TextView
        android:id="@+id/lblsignup"
        android:layout_width="151dp"
        android:layout_height="29dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="41dp"
        android:text="@string/lblsignup"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/personalInfoLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" /><![CDATA[
















    ]]>

    ]]>

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genderLabel"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/chooseGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <TextSwitcher
        android:id="@+id/chooseGender"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="39dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/dobLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <EditText
        android:id="@+id/textFieldFullname"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="39dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="312dp"
        android:text="@string/lblFullname"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/textFieldFullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/genderLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <EditText
        android:id="@+id/textFieldDate"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="39dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:inputType="datetime"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textFieldCountry"
        android:layout_width="334dp"
        android:layout_height="41dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="39dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/continueLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countryLabel"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/textFieldCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/dobLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dobLabel"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/textFieldDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <Button
        android:id="@+id/continueLabel"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/colorAccent"
        android:elevation="10dp"
        android:shadowColor="#696969"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="100"
        android:text="@string/continueLabel"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/lblLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <TextView
        android:id="@+id/accountDetailLabel"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="107dp"
        android:text="@string/accountDetailLabel"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent
"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personalInfoLabel"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="41dp"
        android:text="@string/personalInfoLabel"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lblFullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lblFullname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="326dp"
        android:layout_height="32dp"
        android:
        android:text="@string/lblLogin"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="645dp" />


</androidx.constraintlayout.widget.ConstraintLayout>